# coreml-llm

./: .gitignore  Makefile  README.md  export-model.py  inference-metrics.py  model.py  mypy.ini  predict.py  pyproject.toml
CoreMLRunner/: Package.swift
CoreMLRunner/Sources/CoreMLRunner/: CoreMLRunner.swift  GPT2Model.swift  Generator.swift  Streamer.swift
CoreMLRunner/Sources/CoreMLRunnerCLI/: main.swift
CoreMLRunner/Sources/GPT2ModelCLI/: GPT2Command.swift  main.swift
MyCoreMLRunner/: Package.resolved  Package.swift
MyCoreMLRunner/Sources/: .gitignore  LLMRunner.swift
MyCoreMLRunner/Sources/GPT2ModelCLI/: main.swift
MyCoreMLRunner/cmd/: main.swift
SwiftCoreMLRunner/: Package.swift
gpt-2/baseline/: Package.resolved  coreml-generate.py  export-model.py  python-generate.py
gpt-2/kv-cache/: coreml-generate.py  export-model.py
openai-gpt2/: coreml-generate.py  export-model.py  predict.py  python-generate.py  python-predict.py  python-streaming.py  usage.py
