[tool.poetry]
name = "coreml-llm"
version = "0.1.0"
package-mode = false
description = ""
authors = ["Takanori Ishikawa <takanori.ishikawa@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "4.44.2"
torch = "2.4.0"
numpy = "^2.2.0"
coremltools = "^8.1"
sentencepiece = "^0.2.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
mypy = "^1.13.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
